--- a/style/style-one.css
+++ b/style/style-one.css
@@ -1,9 +1,10 @@
 body {
-  background-color: #272640;
+  background-color: #212f45;
   padding: 0;
   margin: 0;
   min-height: 100vh;
   font-family: "Rubik", Roboto;
+  box-sizing: border-box;
 }
 
 header {
@@ -27,7 +28,7 @@ header {
 
 .line-charcoal {
   width: 90vw;
-  height: 10px;
+  height: 5px;
   border-radius: 5px;
   background-color: #1b3a4b;
 }
@@ -39,8 +40,20 @@ header {
   background-color: #006466;
 }
 
+.image-box {
+  margin-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.image-box img {
+  border-radius: 25px;
+  width: 190px;
+  height: 110px;
+}
+
 #hamburger-menu {
-  background-color: #272640;
+  background-color: #212f45;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -48,9 +61,7 @@ header {
   height: 35px;
   flex-direction: column;
   border: none;
-  padding: 2px;
-  border: 10px;
-  margin-right: 20px;
+  padding-left: 20px;
   align-self: right;
 }
 
@@ -71,36 +82,44 @@ header {
   width: 60%;
 }
 
-#hamburger-menu #sidebar-menu {
+#button-check {
+  visibility: hidden;
+}
+
+.menu {
+  color: white;
   visibility: hidden;
   position: fixed;
   top: 0;
-  left: -250px;
-  width: 200px;
-  height: 100%;
+  right: -350px;
+  width: 250px;
+  height: 100vh;
+  margin: 0;
   background-color: #64FFDA;
   transition: 0.3s;
-  padding: 0px 10px;
-  box-sizing: border-box;
-  z-index: 5;
-  background-color: #006466;
+  padding: 0px 20px;
+  background-color: #065a60;
+  opacity: 98%;
+  list-style-type: none;
+}
+.menu input[type=checkbox] {
+  visibility: hidden;
+}
+.menu a {
+  text-decoration: none;
+  color: darkgray;
+}
+.menu li {
+  padding-top: 8px;
+}
+.menu i {
+  color: #64FFDA;
+  font-size: 50px;
 }
 
-input[type=checkbox]:checked ~ #sidbar-menu {
+input[type=checkbox]:checked ~ .sidebar-menu .menu {
   visibility: visible;
-  left: 0;
-}
-
-.image-box {
-  margin-left: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.image-box img {
-  border-radius: 25px;
-  width: 190px;
-  height: 110px;
+  left: 250px;
 }
 
 main {
