--- a/style/style-one.scss
+++ b/style/style-one.scss
@@ -25,10 +25,8 @@ header {
   display: flex;
   flex-direction: column;
   padding-top: 0px;
-  padding-bottom: 10px;
+  // padding-bottom: 10px;
   justify-content: center;
-  height: 20vh;
-  align-items: center;
 }
 
 // holds the header items in flexbox //
@@ -36,42 +34,57 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 18vh;
+  // height: 18vh;
   width: 100vw;
   align-items: center;
 
 }
 
-.line-charcoal {
-  width: 90vw;
-  height: 5px;
-  border-radius: 5px;
-  background-color: $charcoal;
+// hide the desktop menu
+.desktop-menu {
+  visibility: hidden;
+  position: absolute;
 }
 
-.line-skobelof {
-  width: 95vw;
-  height: 10px;
-  border-radius: 5px;
-  background-color: $skobeloff;
+.menu-shell {
+  display: inline;
 }
 
 // header image style start //
-.image-box {
-  margin-left: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
+// .image-box {
+//   margin-left: 20px;
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+// }
 
 .image-box img {
   border-radius: 25px;
-  width: 190px;
-  height: 110px;
+  width: 130px;
+  height: 70px;
 }
+
+.logo-text i {
+  margin: 0;
+  font-size: 45px;
+  color: $electric-green;
+}
+
+.logo-text {
+  background-color: $charcoal;
+  border-radius: 25px;
+  padding: 5px 15px 15px 15px;
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
+
 // header image style finish //
 
 // custom hamburger menu contruction start //
 #hamburger-menu {
+  margin-right: 20px;
     background-color: $prussian-blue;
     display: flex;
     justify-content: space-between;
@@ -82,27 +95,27 @@ header {
     border: none;
     padding-left: 20px;
     align-self: right;
+    
+    div {
+      width: 100%;
+      height: 10%;
+      border-radius: 5px;
+      background-color: $electric-green;
+    }
+    #div-2 {
+      // height: 12%;
+      width: 80%;
+    } 
+    #div-3 {
+      // height: 12%;
+      width: 60%;
+    } 
 }
 
-#hamburger-menu div {
-  width: 100%;
-  height: 12%;
-  border-radius: 5px;
-  background-color: $electric-green;
-}
-#hamburger-menu #div-2 {
-  // margin-top:
-  height: 12%;
-  width: 80%;
-} 
-
-#hamburger-menu #div-3 {
-  height: 12%;
-  width: 60%;
-} 
-
+// set the checkbox to hidden //
 #button-check {
   visibility: hidden;
+  position: absolute;
 }
 // custom hamburger menu contruction finish //
 
@@ -168,29 +181,169 @@ main h1 {
 footer {
   display: flex;
   flex-direction: column;
-  // text-align: center;
+  text-align: center;
   color: $charcoal;
   background-color: white;
   width: 100vw;
-  height: 65px;
-  align-items: center;
-  justify-content: end;  
+ 
 }
 
-footer section {
-    padding-top: 10px;
-    padding-bottom: 10px;
+.social-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .social-links button{
-  font-size: 30px;
+  font-size: 20px;
   color: #64FFDA;
-  margin: 5px;
+  margin: 15px;
   background-color: $charcoal;
   border-radius: 10px;
-  width: 45px;
-  height: 45px;
+  width: 35px;
+  height: 35px;
+  
 }
 
+footer p {
+  font-size: 10px;
+    padding-top: 10px;
+    padding-bottom: 12px;
+}
+
+
+// media screen setting start here for desktop
+
+@media screen and (min-width: 630px) {
+  
+  header {
+    display: flex;
+    flex-direction: row;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    justify-content: center;
+    height: 20vh;
+    align-items: center;
+  }
+  
+  // holds the header items in flexbox //
+  .header-shell {
+    height: 18vh;
+    width: 100vw;
+  }
+  
+  // header image style start //
+  .image-box {
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .image-box img {
+    border-radius: 25px;
+    width: 130px;
+    height: 70px;
+  }
+  // header image style finish //
+  
+  // custom hamburger menu contruction start // 
+#hamburger-menu {
+      visibility: hidden;
+      // position: absolute;
+      padding: 0;
+      margin: 0;
+}
+
+.sidebar-menu {
+  visibility: hidden;
+}
+
+.menu-shell {
+  display: flex;
+  // justify-content: space-between;
+  visibility: visible;
+}
+
+
+
+.desktop-menu { 
+  display: flex;
+  visibility: visible;
+  position: relative;
+  margin-right: 20px;
+
+  ul{
+    list-style-type: none;
+    align-items: center;
+    display: flex;
+
+  }
+
+  li {
+    display: flex;
+  }
+
+  a {
+    text-align: center;
+    text-decoration: none;
+    font-size: 13px;
+    font-weight: lighter;
+    padding-right: 20px;
+    color: $electric-green;
+  }
+
+  a:hover {
+
+    color: whitesmoke;
+  }
+}
+
+
+  
+
+  main {
+    height: 70vh;
+  }
+  
+  main h1 {
+    font-size: 36px;
+    font-weight: bolder;
+    font-weight: 900;
+  }
+  
+  footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: $charcoal;
+    background-color: white;
+    width: 100vw;
+   
+  }
+  
+  .social-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  
+  .social-links button{
+    font-size: 20px;
+    color: #64FFDA;
+    margin: 15px;
+    background-color: $charcoal;
+    border-radius: 10px;
+    width: 35px;
+    height: 35px;
+    
+  }
+  
+  footer p {
+    font-size: 10px;
+      padding-top: 10px;
+      padding-bottom: 12px;
+  }
+  
+}
 
 
