--- a/style/style-one.scss
+++ b/style/style-one.scss
@@ -5,9 +5,9 @@ $midnight-green-eagle-green-3: #144552ff;
 $charcoal: #1b3a4bff;
 $prussian-blue: #212f45ff;
 $space-cadet: #272640ff;
-$dark-purple: #312244ff;
-$dark-purple-2: #3e1f47ff;
-$palatinate-purple: #4d194dff;
+// $dark-purple: #312244ff;
+// $dark-purple-2: #3e1f47ff;
+// $palatinate-purple: #4d194dff;
 $electric-green: #64FFDA;
 
 @mixin flex-center {
@@ -52,18 +52,17 @@ header {
 .desktop-menu {
   visibility: hidden;
   position: absolute;
+  right: -550px;
 }
 
 .menu-shell {
   display: inline;
 }
 
-// header image style start //
-// .image-box {
-//   margin-left: 20px;
-//   margin-top: 10px;
-//   margin-bottom: 10px;
-// }
+
+.image-box {
+  margin-left: 10px;
+}
 
 .image-box img {
   border-radius: 25px;
@@ -79,17 +78,17 @@ header {
   color: $electric-green;
 }
 
-.logo-text {
-  background-color: $charcoal;
-  border-radius: 25px;
-  padding: 5px 15px 15px 15px;
-  color: white;
-  font-size: 16px;
-  font-weight: 900;
-  text-align: center;
-  margin-left: 10px;
-  margin-bottom: 15px;
-}
+// .logo-text {
+//   background-color: $charcoal;
+//   border-radius: 25px;
+//   padding: 5px 15px 15px 15px;
+//   color: white;
+//   font-size: 16px;
+//   font-weight: 900;
+//   text-align: center;
+//   margin-left: 10px;
+//   margin-bottom: 15px;
+// }
 
 // header image style finish //
 
@@ -225,6 +224,7 @@ main h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   .mike-pic-container {
     width: 170px;
     height: 185px;
@@ -271,7 +271,6 @@ footer {
   margin-top: auto; // Sticks the footer to the bottom
   // because body is a flexbox
  
-  
   .social-links {
     display: flex;
     flex-direction: row;
@@ -298,12 +297,27 @@ footer {
 }
 
 
+// media screen setting for tablets starts here
+
+@media screen and (min-width: 469px) {
+  
+  
+  main {
+    height: 70vh;
+  }
+  
+  main h1 {
+    font-size: 36px;
+    font-weight: bolder;
+    font-weight: 900;
+  }
+}
 
 
 
 // media screen setting start here for desktop
 
-@media screen and (min-width: 630px) {
+@media screen and (min-width: 769px) {
   
   header {
     @include flex-center();
@@ -336,7 +350,6 @@ footer {
   // custom hamburger menu contruction start // 
 #hamburger-menu {
       visibility: hidden;
-      // position: absolute;
       padding: 0;
       margin: 0;
 }
@@ -357,8 +370,8 @@ footer {
 
 .desktop-menu { 
   visibility: visible;
-  // position: relative;
-  // margin-right: 20px;
+  position: relative;
+  right: 0;
   display: flex;
   align-items: flex-end;
   transition: all 0.3s ease 0s;    
@@ -371,7 +384,6 @@ footer {
     small {
       color: $electric-green;
     }
-
   }
 
   li {
@@ -430,25 +442,32 @@ footer {
       flex-direction: row;
       justify-content: space-around;
       padding: 10px 15px 0px 15px;
+      font-size: 70px;
       
       a {  
-        font-size: 20px;
         color: #64FFDA;
-        margin: 15px;
+        // margin: 272px;
         background-color: $charcoal;
-        border-radius: 10px;
-        width: 35px;
-        height: 35px;  
+        // border-radius: 10px;
+        // width: 45px;
+        // height: 35px;  
+        
       }
+    }
+
+    i {
+      // font-size: 24px;
     }
     
     p {
-      font-size: 10px;
+      font-size: 28px;
       padding-top: 10px;
       padding-bottom: 12px;
       color: whitesmoke;
     }
   }
-
-
 }
+
+// http://findmatthew.com/
+// https://brittanychiang.com/
+// https://www.figma.com/
