--- a/style/main.css
+++ b/style/main.css
@@ -1,19 +1,18 @@
-body {
-  background-color: #212f45;
+* {
   padding: 0;
   margin: 0;
-  min-height: 100vh;
-  font-family: "Rubik", Roboto;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
 }
 
-header {
-  display: flex;
-  flex-direction: column;
-  padding-top: 0px;
-  justify-content: center;
+/* hide scrollbar but allow scrolling */
+body {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .header-shell {
@@ -27,31 +26,62 @@ header {
 .desktop-menu {
   visibility: hidden;
   position: absolute;
-  right: -550px;
-}
-
-.menu-shell {
-  display: inline;
 }
 
 .image-box {
   margin-left: 10px;
 }
 
-.image-box img {
-  border-radius: 25px;
-  width: 130px;
-  height: 70px;
+@media screen and (min-width: 1000px) {
+  #hamburger-menu {
+    visibility: hidden;
+    padding: 0;
+    margin: 0;
+  }
+  .sidebar-menu {
+    visibility: hidden;
+  }
+  .menu-shell {
+    display: flex;
+    width: 100%;
+    visibility: visible;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  .desktop-menu {
+    visibility: visible;
+    position: relative;
+    right: 0;
+    display: flex;
+    align-items: flex-end;
+    transition: all 0.3s ease 0s;
+  }
+  .desktop-menu small {
+    color: whitesmoke;
+  }
+  .desktop-menu .nav-link-hover:hover small {
+    color: #64FFDA;
+  }
+  .desktop-menu li {
+    display: inline-block;
+    list-style: none;
+    padding: 0 20px;
+  }
+  .desktop-menu a {
+    text-align: center;
+    text-decoration: none;
+    font-size: 0.9em;
+    font-weight: lighter;
+    transition: all 0.3s ease 0s;
+    color: #64FFDA;
+  }
+  .desktop-menu a:hover {
+    color: whitesmoke;
+  }
+  .desktop-menu p {
+    font-size: 10px;
+  }
 }
-
-.logo-text i {
-  padding-top: 5px;
-  margin: 0;
-  font-size: 29px;
-  font-weight: 800;
-  color: #64FFDA;
-}
-
 #hamburger-menu {
   margin-right: 20px;
   background-color: #212f45;
@@ -62,7 +92,6 @@ header {
   height: 35px;
   flex-direction: column;
   border: none;
-  padding-left: 20px;
   align-self: right;
 }
 #hamburger-menu div {
@@ -70,7 +99,6 @@ header {
   height: 10%;
   border-radius: 5px;
   background-color: #64FFDA;
-  transition: all 0.3s ease-in-out;
 }
 #hamburger-menu #div-2 {
   width: 80%;
@@ -191,6 +219,7 @@ main h1 {
   align-items: center;
   flex-direction: column;
   background-color: #1b3a4b;
+  padding: 40px;
   border: 16px;
   border-radius: 25px;
   width: 100vw;
@@ -208,10 +237,14 @@ footer {
   display: flex;
   flex-direction: column;
   text-align: center;
-  color: #1b3a4b;
-  background-color: #1b3a4b;
   width: 100vw;
   margin-top: auto;
+}
+footer p {
+  font-size: 10px;
+  padding-top: 24px;
+  padding-bottom: 12px;
+  color: whitesmoke;
 }
 footer .social-links {
   display: flex;
@@ -220,134 +253,41 @@ footer .social-links {
   padding: 10px 15px 0px 15px;
 }
 footer .social-links a {
-  font-size: 20px;
+  font-size: 16px;
   color: #64FFDA;
   margin: 15px;
-  background-color: #1b3a4b;
-  border-radius: 10px;
-  width: 35px;
-  height: 35px;
-}
-footer p {
-  font-size: 10px;
-  padding-top: 10px;
-  padding-bottom: 12px;
-  color: whitesmoke;
 }
 
-@media screen and (min-width: 469px) {
-  main {
-    height: 70vh;
-  }
-  main h1 {
-    font-size: 36px;
-    font-weight: bolder;
-    font-weight: 900;
-  }
-}
-@media screen and (min-width: 769px) {
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    padding-bottom: 10px;
-  }
-  .header-shell {
-    height: 18vh;
-    width: 100vw;
-  }
-  .image-box {
-    margin-left: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .image-box img {
-    border-radius: 25px;
-    width: 130px;
-    height: 70px;
-  }
-  #hamburger-menu {
-    visibility: hidden;
-    padding: 0;
-    margin: 0;
-  }
-  .sidebar-menu {
-    visibility: hidden;
-  }
-  .menu-shell {
-    display: flex;
-    width: 100%;
-    visibility: visible;
-    align-items: center;
-    justify-content: flex-end;
-  }
-  .desktop-menu {
-    visibility: visible;
-    position: relative;
-    right: 0;
-    display: flex;
-    align-items: flex-end;
-    transition: all 0.3s ease 0s;
-  }
-  .desktop-menu small {
-    color: whitesmoke;
-  }
-  .desktop-menu .nav-link-hover:hover small {
-    color: #64FFDA;
-  }
-  .desktop-menu li {
-    display: inline-block;
-    list-style: none;
-    padding: 0 20px;
-  }
-  .desktop-menu a {
-    text-align: center;
-    text-decoration: none;
-    font-size: 0.9em;
-    font-weight: lighter;
-    transition: all 0.3s ease 0s;
-    color: #64FFDA;
-  }
-  .desktop-menu a:hover {
-    color: whitesmoke;
-  }
-  .desktop-menu p {
-    font-size: 10px;
-  }
-  main {
-    height: 70vh;
-  }
-  main h1 {
-    font-size: 36px;
-    font-weight: bolder;
-    font-weight: 900;
-  }
-  footer {
-    padding-top: 10px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    color: #1b3a4b;
-    background-color: #1b3a4b;
-    width: 100vw;
-    margin-top: auto;
-  }
-  footer .social-links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 10px 15px 0px 15px;
-    font-size: 70px;
+@media screen and (min-width: 500px) {
+  footer p {
+    font-size: 12px;
   }
   footer .social-links a {
-    color: #64FFDA;
-    background-color: #1b3a4b;
+    font-size: 20px;
   }
+}
+@media screen and (min-width: 1050px) {
   footer p {
-    font-size: 28px;
-    padding-top: 10px;
-    padding-bottom: 12px;
-    color: whitesmoke;
+    font-size: 14px;
   }
-}/*# sourceMappingURL=style-one.css.map */
+  footer .social-links a {
+    font-size: 24px;
+  }
+}
+body {
+  background-color: #212f45;
+  min-height: 100vh;
+  font-family: "Rubik", Roboto;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  height: 70vh;
+}
+
+main h1 {
+  font-size: 36px;
+  font-weight: bolder;
+  font-weight: 900;
+}/*# sourceMappingURL=main.css.map */
