--- a/style/components/_hamburger.scss
+++ b/style/components/_hamburger.scss
@@ -1,59 +1,38 @@
-// custom hamburger menu contruction start //
+// custom hamburger menu contruction start 
+// mobile screen styling settings
 #hamburger-menu {
   margin-right: 20px;
-    background-color: $prussian-blue;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 50px;
-    height: 35px;
-    flex-direction: column;
-    border: none;
-    // padding-left: 20px;
-    align-self: right;
-    
-    div {
-      width: 100%;
-      height: 10%;
-      border-radius: 5px;
-      background-color: $electric-green;
-      // transition: all .3s ease-in-out;
-    }
-    #div-2 {
-      // height: 12%;
-      width: 80%;
-    } 
-    #div-3 {
-      // height: 12%;
-      width: 60%;
-    } 
-  }
+  background-color: $prussian-blue;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-direction: column;
+  border: none;
+  align-self: right;
 
-#hamburger-menu:active {
-  transition: visibility 0;
+  svg {
+    width: 40px;
+    height: 40px;
+    line {
+      stroke: $electric-green;
   
-  #div-1 {
-    // transform: rotate(90deg);
-    // transform-origin: center bottom;
-    // transform:translateX(10px);
-    transform: rotate(90deg) translateX(-7px) translateY(-25px);
-    transform-origin: 1px;
+    }
   }
+}
+  
+// media screen setting for tablets starts here
 
-  #div-2 {
-    // transform: rotateY(100deg);
-    top: 10px;
-    translate: 15% 50%;
-    transform-origin: 2px;
-    transform: translateX(-9px) translateY(-2px);
-    transition: 0.5s;
-    // transform: rotate(90deg);
-  } 
-  #div-3 {
-    transform: rotate(90deg);
-    opacity: 0;
+@media screen and (min-width: 500px) {
+  #hamburger-menu {
+    svg {
+    width: 45px;
+    height: 45px;
+    line {
+      stroke: $electric-green;
+  
+      }
+    }
   }
-
 }
 
 // set the checkbox to hidden //
