--- a/style/components/_sidebar-menu.scss
+++ b/style/components/_sidebar-menu.scss
@@ -24,13 +24,13 @@
     
     li {
       list-style-type: none;
-      padding-top: 8px;
+      padding-top: 18px;
+      font-size: 20px;
     }
-    
+    // style for sidebar arrow icon
     i {
       color: $electric-green;
       font-size: 50px;
-      
     }
 }
 
@@ -42,6 +42,5 @@ input[type=checkbox]:checked ~ .sidebar-menu .menu{
   visibility: visible;
   right: 0;
 }
-
 
 // sidebar nav menu ends here //
